SAK-20708 Podcast's Spanish translation needs an important review
git-svn-id: https://source.sakaiproject.org/svn/podcasts/branches/sakai-2.8.x@93907 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
@@ -3,16 +3,16 @@ title_prompt=T\u00EDtulo
 date_prompt=Fecha/Hora de Publicaci\u00F3n
 del_confirm=\u00BFEst\u00E1 seguro de querer borrar los podcast siguientes?
 invalid_date_alert=Ha de introducir la fecha en el siguiente formato\: MM/DD/YYYY HH\:MM AM/PM
-internal_error_alert=Un error interno impidi\u00F3 que su operaci\u00F3n se completara. Por favor intente otra vez.
+internal_error_alert=Un error interno impidi\u00F3 que su operaci\u00F3n se completara. Por favor int\u00E9ntelo otra vez.
 options_directions3=escoja Mostrar el Sitio.
-options_directions2=escoja Mostar los no-miembros (visible p\u00FAblicamente). Para restringir el acceso al podcast de los participantes de su sitio y desactivar en acceso a trav\u00E9s de
-options_directions1=Para proveer acceso a su podcast a traves de un
+options_directions2=escoja Mostrar a los no miembros (visible p\u00FAblicamente). Para limitar el acceso al podcast a los participantes de su sitio y desactivar el acceso a trav\u00E9s de
+options_directions1=Para proveer acceso a su podcast a trav\u00E9s de un
 change_submit=Guardar Cambios
 notitle_alert=Alerta\: Debe introducir un t\u00EDtulo
 publish_date_format=EEEEEE',' dd MMMMM yyyy hh\:mm a z
 podcast_home_title=Podcasts
 add=A\u00F1adir
-feed_desc2=Por favor compruebe otra vez a lo largo del semestre para actualizar.
+feed_desc2=Por favor, compruebe otra vez a lo largo del semestre para actualizaciones.
 spacer_bar=| 
 feed_copyright=Copyright 2006 The Sakai Foundation. All rights reserved.
 feed_desc1=Podcast oficial.
@@ -22,14 +22,14 @@ max_size_exceeded_alert=\u00A1Atenci\u00F3n\! El tama\u00F1o del fichero excede 
 add_title=A\u00F1adir Podcast
 colon=\:
 permissions=Permisos
-io_alert=Hubio un problema con la carga de su archivo. Por favor compruebe la ruta o re-escoja e intente otra vez.
-id_invalid_alert=La ID del recurso es invalida. Por favor pruebe otra vez y si vuelve a ocurrir contacte con el soporte para resolver el problema.
+io_alert=Hubo un problema con la carga de su archivo. Por favor, compruebe la ruta o vu\u00E9lvalo a seleccionar e int\u00E9ntelo de nuevo.
+id_invalid_alert=El ID del recurso es inv\u00E1lido. Por favor, pruebe otra vez y si vuelve a ocurrir contacte con el soporte para resolver el problema.
 permission_directions=Establecer los permisos para la carpeta de Podcasts en el sitio de trabajo {0}
 podfeed_copyrighttext=Copyright 2007.
 file_prompt=Escoja un fichero
 perm_title=Permisos
 revise=Editar
-no_resource_alert=Para usar la utilidad Podcast, primero ha de a\u00F1adir el {0} herramienta.
+no_resource_alert=Para usar la utilidad Podcast, primero ha de a\u00F1adir la herramienta {0}.
 open_paren=(
 delete_title=Borrando Podcast...
 on=en
@@ -37,10 +37,10 @@ revise_title=Editar el Podcast
 podfeed_revise_title=Editar el Feed del Podcast
 description_prompt=Descripci\u00F3n
 role=Rol
-quota_alert=Ha accedido el espacio de sus Recursos. Borre elementos y pruebe otra vez.
+quota_alert=Ha excedido el espacio disponible para sus Recursos. Borre elementos y pruebe otra vez.
 date_picker_format=MM/dd/yyyy hh\:mm\:ss a
 internal_date_format=yyyyMMddhhmmssSSS
-subscribe=Subscibir\:
+subscribe=Suscribirse\:
 current_date=Fecha/Hora de Publicaci\u00F3n Actual
 new=Nuevo
 read=Leer
@@ -55,17 +55,17 @@ current_file=Fichero actual
 nodate_alert=Alerta\: Tiene que introducir una fecha y una hora
 at=en
 permission_alert=No tiene permisos para borrar el fichero seleccionado.
-option_change_confirm=Los permisos del feed del Podcast han cambiado. Este feed ya no ed p\u00FAblico. Para dar acceso a los no participantes del feed del podcast, seleccione el enl\u00E1ce de Opciones de encima y seleccione el bot\u00F3n de radio al lado de la Vista de los no miembros (visible en p\u00FAblico).
+option_change_confirm=Los permisos del feed del Podcast han cambiado. Este feed ya no ed p\u00FAblico. Para dar acceso en este sitio al feed del podcast a los no participantes, pulse Opciones en la barra superior y seleccione el bot\u00F3n Mostrar a los no miembros (visible p\u00FAblicamente).
 perm_directions=Escoja los permisos del Podcast en el sitio de trabajo
-file_to_upload=Fichero para subir
-id_unused_alert=La ID para el recurso no corresponde con un recurso v\u00E1lido. Por favor pruebe otra vez y si esto vuelve a ocurrir contante con el soporte.
+file_to_upload=Fichero a subir
+id_unused_alert=El ID del recurso no se corresponde con un recurso v\u00E1lido. Por favor, pruebe otra vez y si vuelve a ocurrir contante con el soporte.
 date_picker_format_string=(Formato\: MM/DD/YYYY HH\:MM AM/PM)
 email_prompt=Notificaci\u00F3n por Email
 download=Descargar
 nofile_alert=Alerta\: Debe escoger un fichero
-podcast_home_sub=Suscribase copiando la direcci\u00F3n del feed RSS y peg\u00E1ndola en sus favoritos
+podcast_home_sub=Suscr\u00EDbase copiando la direcci\u00F3n del feed RSS y peg\u00E1ndola en sus favoritos
 podfeed_revise_url_caption=Direcci\u00F3n del RSS feed 
-options_public=Mostrar los no miembros (visible p\u00FAblicamente)
+options_public=Mostrar a los no miembros (visible p\u00FAblicamente)
 options_site=Mostrar el sitio
 length_alert=La URL, incluyendo el nombre del fichero, no puede exceder de 254 caractertes. Para a\u00F1adir este podcast reduzca el contenido del nombre del fichero y pruebe otra vez
 delete=Borrar
@@ -73,11 +73,11 @@ date_by_hand_format=MM/dd/yyyy hh\:mm a
 options_title=Opciones
 podcatcher=podcatcher
 notitle=Debe introducir un t\u00EDtulo
-popup_text=Un podcatcher es un programa usado para descargar autom\u00E1ticamente los podcast. iTuenes tiene un podcatcher muy popular, pero no es el \u00FAnico software disponible para esto.
+popup_text=Un podcatcher es un programa usado para descargar autom\u00E1ticamente los podcast. iTuenes tiene un podcatcher muy popular, pero no es el \u00FAnico software disponible para \u00E9sto.
 cancel=Cancelar
 posted_by=Enviado por 
-id_used_alert=La ID del recurso ya est\u00E1 en uso. Por favor vuelva a intentarlo.
-no_access=No esta autorizado a ver esta herramienta. Contacte con su centro de soporte.
+id_used_alert=El ID del recurso ya est\u00E1 en uso. Por favor, vuelva a intentarlo.
+no_access=No est\u00E1 autorizado a ver esta herramienta. Contacte con su centro de soporte.
 podfeed_author=Creado por Sakai
-podfeed_revise_directions=El t\u00EDtulo y la descripci\u00F3n del feed del podcast estar\u00E1 disponible por los participantes del sitio dentro del podcatcher. Actualize el formulario, entonces seleccione el bot\u00F3n apropiado.
-revise_directions=Actualice el formulario, a continuaci\u00F3n escoja el bot\u00F3n apropiado
+podfeed_revise_directions=El t\u00EDtulo y la descripci\u00F3n del feed del podcast estar\u00E1n disponibles para los participantes del sitio dentro del podcatcher. Actualize el formulario y, a continuaci\u00F3n, seleccione el bot\u00F3n apropiado.
+revise_directions=Actualice el formulario y, a continuaci\u00F3n, escoja el bot\u00F3n apropiado
