--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_tr_TR.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_tr_TR.properties
@@ -1,9 +1,9 @@
 
 access=Eri\u015fim
 add=Ekle
-add_directions=Formu doldur, daha sonra a\u015fa\u011f\u0131daki uygun dü\u011fmeyi seç.
+add_directions=Formu doldurun, daha sonra alt\u0131ndaki uygun dü\u011fyi seçin.
 add_title=Podcast Ekle
-at=at\ 
+at=- \ 
 cancel=Vazgeç
 change_submit=De\u011fi\u015fiklikleri Kaydet
 close_paren=)
@@ -14,70 +14,70 @@ date_by_hand_format=MM/dd/yyyy hh:mm a
 date_picker_format=MM/dd/yyyy hh:mm:ss a
 date_picker_format_string=(Biçim: MM/DD/YYYY HH:MM AM/PM)
 date_prompt=Yay\u0131n Tarihi/Saati
-del_confirm=A\u015fa\u011f\u0131daki podcasti silmek istedi\u011finizden emin misiniz?
+del_confirm=Bu podcast dosyas\u0131n\u0131 silmek istedi\u011finizden emin misin?
 delete=Sil
 delete_submit=Sil
-delete_title=Podcast siliniyor...
+delete_title=Podcast Siliniyor...
 description_prompt=Aç\u0131klama
-download=\u0130ndirme
+download=\u0130ndir
 email_prompt=Eposta Bildirimi
-feed_copyright=Telif Hakk\u0131 2007  Sakai Foundation. Tüm haklar\u0131 sakl\u0131d\u0131r.
-feed_desc1=\ resmi podcast.
-feed_desc2=\ Lütfen güncellemeler için dönem boyunca kontrol edin.
-feed_title='nin resmi Podcasti.
-file_prompt=Bir dosya seç
+feed_copyright=Tüm haklar\u0131 sakl\u0131d\u0131r.
+feed_desc1=\ resmi podcast dosyas\u0131.
+feed_desc2=Güncellemeler için dönem boyunca tekrar kontrol edin.
+feed_title=resmi  Podcast Dosyas\u0131.
+file_prompt=Bir dosya seçin
 file_to_upload=Yüklenecek Dosya
-id_invalid_alert=ID kaynak için geçersiz kaynakt\u0131r. Lütfen daha sonra tekrar deneyin ve tekrar ederse, gidermek için destekle ileti\u015fime geçin.
-id_unused_alert=ID kaynak için uyu\u015fmayan geçersiz bir kaynakt\u0131r. Lütfen daha sonra tekrar deneyin ve tekrar ederse, gidermek için destekle ileti\u015fime geçin.
-id_used_alert=Kaynak için ID zaten kullan\u0131mdad\u0131r. Lütfen tekrar deneyin.
+id_invalid_alert=Kaynak için kimlik geçersiz. Lütfen tekrar deneyin ve e\u011fer tekrarlarsasorunu gidermek için deste\u011fe ba\u015fvurun.
+id_unused_alert=Kaynak için kimlik geçerli bir kayna\u011f\u0131 i\u015faret etmiyor. Lütfen tekrar deneyin ve e\u011fer tekrarlarsasorunu gidermek için deste\u011fe ba\u015fvurun.
+id_used_alert=Kaynak için kod zaten kullan\u0131lmakta. Lütfen tekrar deneyin.
 internal_date_format=yyyyMMddhhmmssSSS
-internal_error_alert=Bir dahili hata i\u015fleminizin tamamlanmas\u0131n\u0131 engelledi. Lütfen yeniden deneyin.
-invalid_date_alert=Tarihi \u015fu \u015fekilde girmelisiniz: MM/DD/YYYY HH:MM AM/PM
-io_alert=Dosyan\u0131z yüklenirken hata oldu. Lütfen yol ad\u0131n\u0131 kontrol edin ya da yeniden seçerek deneyin
-length_alert=Podcast URLsi dosya ismi dahil 254 karakteri geçemez. Podcast dosyas\u0131n\u0131 ba\u015far\u0131l\u0131 bir eklemek için dosya ismi uzunlu\u011funu azalt\u0131n ve yeniden deneyin.
-maint=Maintain
-max_size_exceeded_alert=Alert: The upload size limit of {0} MB has been exceeded.
-new=New
-no_access=You are not authorized to view this tool. Contact your local support center for assistance.
-no_podcasts=There are currently no podcasts at this location.
-no_resource_alert=To use the Podcasts tool, you must first add the {0} tool.
-nodate_alert=Alert: You must enter a date and time
-nofile_alert=Alert: You must choose a file
-notitle=You must enter a title
-notitle_alert=Alert: You must enter a title
-on=on\ 
+internal_error_alert=Bir iç hata sebebiyle çal\u0131\u015fman\u0131n tamamlanmas\u0131 engellendi. Lütfen yeniden deneyin.
+invalid_date_alert=Tarihi a\u015fa\u011f\u0131daki biçimde girmelisiniz: MM/DD/YYYY HH:MM AM/PM
+io_alert=Dosyan\u0131z yüklenirken bir sorun olu\u015ftu. Lütfen dosya yolunu kontrol edin ya da yeniden seçin ve tekrar deneyin.
+length_alert=Podcast URLsi, dosya ismi dahil, 254 karakteri geçemez. Podcast dosyas\u0131n\u0131 ba\u015far\u0131yla ekleyebilmek için dosya ad\u0131n\u0131 k\u0131salt\u0131n ve tekrar deneyin.
+maint=Bak\u0131m
+max_size_exceeded_alert=Uyar\u0131: Dosya aktar\u0131m boyutu s\u0131n\u0131r\u0131 olan {0} MB a\u015f\u0131ld\u0131.
+new=Yeni
+no_access=Bu arac\u0131 görüntülemeye yetkili de\u011filsiniz. Yard\u0131m için yöneticinizle irtibata geçin.
+no_podcasts=Bu konumda podcast bulunmamaktad\u0131r.
+no_resource_alert=Podcast arac\u0131n\u0131 kullanmak için öncelikle {0} arac\u0131n\u0131 eklemelisiniz.
+nodate_alert=Uyar\u0131: Tarih ve saat girmelisiniz
+nofile_alert=Uyar\u0131: Bir dosya seçmelisiniz
+notitle=Ba\u015fl\u0131k girmelisiniz
+notitle_alert=Uyar\u0131: Bir ba\u015fl\u0131k girmelisiniz
+on=- \ 
 open_paren=(
-option_change_confirm=The permissions for the Podcasts feed have changed. This feed is no longer publicly viewable. For non-participants to access the podcast feed for this site, select the Options link above and select the radio button next to Display to non-members (publicly viewable).
-options=Options
-options_directions1=To provide access to your podcasts through a
-options_directions2=choose Display to non-members (publicly available). To restrict access to your podcasts to your site's participants and disable access through a
-options_directions3=choose Display to Site.
-options_public=Display to non-members (publicly viewable)
-options_site=Display to site
-options_title=Options
-perm_directions=Set permissions for Podcasts in worksite\ 
-perm_title=Permissions
-permission_alert=You do not have permission to delete the selected file.
-permission_directions=Set permissions for Podcasts folder in worksite {0}
-permissions=Permissions
-podcast_home_sub=Subscribe now by copying this RSS feed address and pasting it into your favorite
-podcast_home_title=Podcasts
+option_change_confirm=Podcast beslemesi için izinler de\u011fi\u015fti. Bu besleme art\u0131k herkes taraf\u0131ndan görüntülenememektedir. Bu sitenin kat\u0131l\u0131mc\u0131s\u0131 olmayanlar\u0131n podcast yay\u0131n\u0131na eri\u015fimi için yukar\u0131daki Seçenekler ba\u011flant\u0131s\u0131n\u0131 seçin ve üye olmayan (herkes görebilir) radyo dü\u011fmesini seçin.
+options=Seçenekler
+options_directions1=Podcast eri\u015fimi sa\u011flamak için
+options_directions2=üye olmayanlara gösterilece\u011fi (herkes görebilir) seçin. Sitenizin kat\u0131l\u0131mc\u0131lar\u0131n\u0131n podcast eri\u015fimini k\u0131s\u0131tlamak ve üzerinden eri\u015fimi devre d\u0131\u015f\u0131 b\u0131rakmak için:
+options_directions3=Sitede Gösterilecek.
+options_public=Üye olmayan (herkes görebilir)
+options_site=Sitede Gösterilecek
+options_title=Seçenekler
+perm_directions=Sitedeki Podcast izinlerini ayarla
+perm_title=\u0130zinler
+permission_alert=Seçilen dosyay\u0131 silmek için izniniz yok.
+permission_directions={0} sitesindeki Podcast klasörünün izinlerini ayarla
+permissions=\u0130zinler
+podcast_home_sub=Bu RSS besleme adresini kopyalayarak ve s\u0131k kullan\u0131lanlara ekleyerek \u015fimdi abone ol
+podcast_home_title=Podcast
 podcatcher=podcatcher
-podfeed_author=Created by Sakai
-podfeed_copyrighttext=Copyright {0}.
-podfeed_revise_directions=The title and description of the podcast feed will be available to site participants from within their podcatcher.  Update the form, then choose the appropriate button at the bottom.\ 
-podfeed_revise_title=Edit Podcast Feed
-podfeed_revise_url_caption=RSS feed address
-popup_text=A podcatcher is a computer program used to automatically download podcasts.  iTunes is a popular podcatcher, but is not the only software available for this purpose.
-posted_by=Posted by\ 
+podfeed_author=
+podfeed_copyrighttext=Telif Hakk\u0131 {0}.
+podfeed_revise_directions=Podcast beslemesinin ba\u015fl\u0131k ve aç\u0131klamas\u0131 siteden kat\u0131l\u0131mc\u0131lara kendi Podcatcher uygulamalar\u0131yla sunulacak. Formu güncelleyin, daha sonra alt\u0131ndaki uygun dü\u011fmeyi seçin.
+podfeed_revise_title=Podcast Beslemesi Düzenleme
+podfeed_revise_url_caption=RSS besleme adresi
+popup_text=Podcatcher otomatik olarak podcast yüklemek için kullan\u0131lan bir bilgisayar program\u0131d\u0131r.  iTunes, popüler bir Podcatcher uygulamas\u0131d\u0131r ancak bu amaç için tek yaz\u0131l\u0131m de\u011fildir.
+posted_by=Gönderen
 publish_date_format=EEEEEE',' dd MMMMM yyyy hh:mm a z
-quota_alert=You have exceeded your quota in Resources.  Delete items and try again.
-read=Read
-required_prompt=Required items marked with a\ 
-revise=Edit
-revise_directions=Update the form, then choose the appropriate button at the bottom.
-revise_title=Edit Podcast
-role=Role
+quota_alert=Kaynaklar\u0131n\u0131zda kotan\u0131z\u0131 a\u015ft\u0131n\u0131z. Ö\u011feleri silin ve tekrar deneyin.
+read=Oku
+required_prompt=Gerekli ö\u011feler i\u015faretli
+revise=Düzenle
+revise_directions=Formu güncelle, sonra alt k\u0131sm\u0131ndaki uygun dü\u011fmeyi seç.
+revise_title=Podcast Düzenle
+role=Rolü
 spacer_bar=|\ 
-subscribe=Subscribe:
-title_prompt=Title
+subscribe=Abone Ol:
+title_prompt=Ba\u015fl\u0131k
