Updating catalan bundles on Sakai CLE tool SAK-22956
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@116896 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
@@ -57,7 +57,7 @@ file_prompt = Trieu un fitxer
 
 file_to_upload = Fitxer a pujar
 
-id_invalid_alert = L'ID del recurs \u00E9s d'un recurs inv\u00E0lid. Proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
+id_invalid_alert = L'ID del recurs \u00E9s d'un recurs no v\u00E0lid. Proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
 
 id_unused_alert = L'ID del recurs no correspon a cap recurs v\u00E0lid. Proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
 
@@ -115,13 +115,13 @@ options_title = Opcions
 
 perm_directions = Especifiqueu els permisos per als podcasts a l'espai de treball
 
-perm_title = Permisos
+perm_title = Autoritzacions
 
 permission_alert = No teniu autoritzaci\u00F3 per suprimir el fitxer seleccionat.
 
 permission_directions = Configura els permisos per a la carpeta de Podcasts a l''espai de treball "{0}"
 
-permissions = Permisos
+permissions = Autoritzacions
 
 podcast_home_sub = Subscriviu-vos ara copiant l'adre\u00E7a d'aquest generador RSS i enganxant-la als vostres preferits
 
