Changes to avuid wrong escaping in " ' " characters. Some were missed in the first commit SAK-22956.
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@121514 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
@@ -23,11 +23,11 @@ current_date = Data/Hora de publicaci\u00F3 actual
 
 current_file = Fitxer actual
 
-date_by_hand_format = MM/dd/aaaa hh:mm a
+date_by_hand_format = dd/MM/yyyy hh\:mm\:ss a
 
-date_picker_format = MM/dd/aaaa hh:mm:ss a
+date_picker_format = dd/MM/yyyy hh\:mm\:ss a
 
-date_picker_format_string = (Format: MM/DD/AAAA HH:MM AM/PM)
+date_picker_format_string = (Format: DD/MM/AAAA HH:MM AM/PM)
 
 date_prompt = Data/Hora de publicaci\u00F3 
 
@@ -63,7 +63,7 @@ id_unused_alert = L'ID del recurs no correspon a cap recurs v\u00E0lid. Proveu-h
 
 id_used_alert = L'ID del recurs ja existeix. Torneu-ho a provar amb un altre.
 
-internal_date_format = aaaaMMddhhmmssSSS
+internal_date_format = yyyyMMddhhmmssSSS
 
 internal_error_alert = Un error intern no ha  perm\u00E9s finalitzar la vostra operaci\u00F3. Proveu-ho de nou.
 
@@ -83,7 +83,7 @@ no_access = No teniu autoritzaci\u00F3 per veure aquesta eina. Contacteu amb el 
 
 no_podcasts = Actualment no hi ha podcasts en aquesta ubicaci\u00F3.
 
-no_resource_alert = Per a utilitzar l'eina de Podcasts, primer heu d'afegir l'eina {0}.
+no_resource_alert = Per a utilitzar l''eina de Podcasts, primer heu d''afegir l''eina {0}.
 
 nodate_alert = Av\u00EDs: Heu d'introduir una data i una hora
 
@@ -143,7 +143,7 @@ popup_text = Un podcatcher \u00E9s un programa inform\u00E0tic per a descarregar
 
 posted_by = Enviat per 
 
-publish_date_format = EEEEEE',' dd MMMMM aaaa hh:mm a z
+publish_date_format = EEEEEE',' dd MMMMM yyyy HH:mm z
 
 quota_alert = Heu excedit la vostra quota de Recursos. Suprimiu elements i proveu-ho de nou.
 
