SAK-25743 - Update eu translation.
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@306129 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/permissions_eu.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/permissions_eu.properties
@@ -1,3 +1,4 @@
+#X-Generator: crowdin.net
 desc-content.new=Sortu podcast-ak
 desc-content.read=Irakurri podcast-ak
 desc-content.revise.any=Editatu edozein podcast
