SAK-25885 Portuguese translation
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@307232 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_PT.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_PT.properties
@@ -9,7 +9,7 @@ options_directions2=seleccione Vis\u00EDvel ao p\u00FAblico. Para restringir os 
 options_directions1=Para dar acesso aos Podcasts atrav\u00E9s de um 
 change_submit=Guardar altera\u00E7\u00F5es
 notitle_alert=Aviso\: \u00C9 necess\u00E1rio introduzir um t\u00EDtulo
-publish_date_format=EEEEEE',' dd MMMMM yyyy hh\:mm a z
+publish_date_format=EEEEEE',' MMM dd yyyy hh\:mm a z
 podcast_home_title=Podcasts
 add=Criar
 feed_desc2=\ Por favor volte frequentemente para actualiza\u00E7\u00F5es.
@@ -37,7 +37,7 @@ podfeed_revise_title=Editar Subscri\u00E7\u00E3o Podcast
 description_prompt=Descri\u00E7\u00E3o
 role=Perfil
 quota_alert=Excedeu a sua quota nos Recursos. Remova alguns itens e tente novamente.
-date_picker_format=yyyy/MM/dd hh\:mm\:ss a
+date_picker_format=MMM/dd/yyyy hh\:mm\:ss a
 internal_date_format=yyyyMMddhhmmssSSS
 subscribe=Subscrever\:
 current_date=Data de publica\u00E7\u00E3o actual
@@ -68,7 +68,7 @@ options_public=Vis\u00EDvel ao p\u00FAblico
 options_site=Vis\u00EDvel na \u00E1rea
 length_alert=O URL do Podcast, incluindo o nome do ficheiro, n\u00E3o pode exceder os 254 caracteres.
 delete=Remover
-date_by_hand_format=yyyy/MM/dd hh\:mm a
+date_by_hand_format=MMM/dd/yyyy hh\:mm a
 options_title=Op\u00E7\u00F5es
 podcatcher=leitor de Podcasts
 notitle=T\u00EDtulo n\u00E3o especificado
