SAK-25743 - Update eu translations up to 100% (Crowdin - 2014) (Basque)
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@307843 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_eu.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_eu.properties
@@ -15,9 +15,8 @@ posted_by=Nork bidalia
 
 access=Sarbidea
 add=Gehitu
-at=noiz+ 
+at=noiz
 cancel=Utzi
-colon\=\:=
 delete=Ezabatu
 download=Behera kargatu
 maint=Mantendu
@@ -76,7 +75,7 @@ options_directions3=aukeratu "Bistaratu gunearentzat".
 
 options_public=Bistaratu mundu guztiarentzat (baliabide publikoa)
 options_site=Bistaratu gunearen kideentzat
-options_site_disabled=Disabled to site is unavailable, this may be because the whole site is already public.
+options_site_disabled=Gunerako eskuraezina ezartzea ezin da, litekeena da gune osoa jadanik publiko delako.
 
 option_change_confirm=Podcasten baimenak aldatu dira. Feed fitxategi hau ez da gehiago egongo modu publikoan ikusgai. Kide ez direnek sarbidea izan dezaten podcastera, hartu goiko Aukerak esteka, eta aukeratu radioaren botoia, Bistaratu kide ez direnentzat dioen tokiaren ondoan (baliabide publikoa).
 
