--- a/podcasts-app/src/bundle/podcast_eu.properties
+++ b/podcasts-app/src/bundle/podcast_eu.properties
@@ -1,5 +1,5 @@
 #X-Generator: crowdin.net
 # descriptions for podcast entities
-podcast=Represents the Podcast tool
-podcast.action.site=Gets the podcast items for a given site.
+podcast=Podcast tresna adierazten du
+podcast.action.site=Gune zehatz baterako podcast-item-ak lortzen ditu.
 
